--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="over"></div>
                         <video autoplay loop muted plays-inline class="web-video">
-                            <source src="img/Web_Video2.webm" type="video/mp4">
+                            <source src="img/Web_Video2.webm" type="video/webm">
                         </video>
                     </div>
 
